--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@tailwindcss/vite": "^4.1.3",
     "@types/jest": "^29.5.14",
     "@types/node": "^22.13.14",
+    "antd": "^5.24.6",
     "axios": "^1.8.3",
     "class-variance-authority": "^0.7.1",
     "lucide-react": "^0.485.0",
