--- a/package.json
+++ b/package.json
@@ -22,10 +22,12 @@
     "@types/node": "^22.13.14",
     "antd": "^5.24.6",
     "axios": "^1.8.3",
+    "chart.js": "^4.4.9",
     "class-variance-authority": "^0.7.1",
     "lucide-react": "^0.485.0",
     "prop-types": "^15.8.1",
     "react": "^19.0.0",
+    "react-chartjs-2": "^5.3.0",
     "react-dom": "^19.0.0",
     "react-router-dom": "^6.30.0"
   },
