feat: Edit User, Delete User

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,7 +9,11 @@
     "strict": true,
     "forceConsistentCasingInFileNames": true,
     "moduleResolution": "node",
-    "outDir": "lib"
+    "outDir": "lib",
+    "baseUrl": ".",
+    "paths": {
+      "@/*": ["./src/*"]
+    }
   },
   "include": ["src/ts-components"]
 }
