--- a/package.json
+++ b/package.json
@@ -19,21 +19,23 @@
     "@radix-ui/react-tooltip": "^1.1.8",
     "@tailwindcss/vite": "^4.1.3",
     "@types/jest": "^29.5.14",
-    "@types/node": "^22.13.14",
     "antd": "^5.24.6",
     "axios": "^1.8.3",
     "chart.js": "^4.4.9",
     "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
     "lucide-react": "^0.485.0",
     "prop-types": "^15.8.1",
     "react": "^19.0.0",
     "react-chartjs-2": "^5.3.0",
     "react-dom": "^19.0.0",
-    "react-router-dom": "^6.30.0"
+    "react-router-dom": "^6.30.0",
+    "tailwind-merge": "^3.2.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.25.1",
     "@eslint/json": "^0.12.0",
+    "@types/node": "^22.15.3",
     "@types/react": "^19.1.0",
     "@types/react-dom": "^19.1.2",
     "@vitejs/plugin-react": "^4.3.4",
@@ -46,6 +48,7 @@
     "postcss": "^8.5.3",
     "prettier": "^3.5.3",
     "tailwindcss": "^4.1.3",
+    "tw-animate-css": "^1.2.8",
     "typescript": "^5.8.3",
     "vite": "^6.2.3"
   }
