--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@radix-ui/react-slot": "^1.2.0",
     "@radix-ui/react-tooltip": "^1.2.4",
     "@tailwindcss/vite": "^4.1.3",
+    "@tanstack/react-query": "^5.75.2",
     "@types/jest": "^29.5.14",
     "antd": "^5.24.6",
     "axios": "^1.8.3",
